--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
+    "@rollup/plugin-replace": "^2.2.1",
     "babel-jest": "24.7.1",
     "jest": "24.7.1",
     "jsutils": "git+https://github.com/lancetipton/jsutils.git",
@@ -24,7 +25,7 @@
     "rollup-plugin-cleanup": "3.1.1",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-replace": "2.2.0"
+    "rollup-plugin-sourcemaps": "^0.4.2"
   },
   "peerDependencies": {
     "jsutils": "git+https://github.com/lancetipton/jsutils.git",
