Updates   * Updated build to output es and cjs builds   * Updated package json to use modules

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "cascader",
   "version": "1.0.0",
   "description": "React Cascade Render",
-  "main": "index.js",
+  "main": "build/index.cjs.js",
+  "module": "build/index.es.js",
   "repository": "https://github.com/lancetipton/cascader",
   "author": "Lance Tipton",
   "license": "MIT",
