--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "cascader",
-  "version": "1.0.0",
+  "name": "@ltipton/cascader",
+  "version": "0.0.1",
   "description": "React Cascade Render",
   "main": "build/index.cjs.js",
   "module": "build/index.es.js",
   "repository": "https://github.com/lancetipton/cascader",
   "author": "Lance Tipton",
   "license": "MIT",
+  "keywords": [
+    "json",
+    "schema",
+    "cascade",
+    "render",
+    "cascader"
+  ],
   "scripts": {
-    "build": "node configs/build.config.js",
-    "dev": "DEV_BUILD=1 node --enable-source-maps configs/build.config.js",
-    "start": "DEV_BUILD=1 node --enable-source-maps configs/build.config.js",
+    "build": "yarn build:clean && yarn build:es",
+    "build:es": "node configs/build.config.js",
+    "build:clean": "rimraf ./build",
+    "clean:full": "yarn clean && yarn install",
+    "clean": "yarn cache clean && rimraf node_modules && npm cache clean --force",
+    "dev": "yarn build:clean DEV_BUILD=1 node --enable-source-maps configs/build.config.js",
+    "format:eslint": "eslint --config configs/eslintrc.config.js . --fix --quiet",
+    "format:prettier": "prettier --config configs/prettier.config.js --ignore-path .eslintignore --write '**/*.{js,jsx}'",
+    "format": "yarn format:prettier && yarn format:eslint",
+    "start": "yarn build:clean DEV_BUILD=1 node --enable-source-maps configs/build.config.js",
     "test": "NODE_ENV=test jest --colors --verbose --config configs/jest.config.js",
     "test:cov": "NODE_ENV=test jest --colors --verbose --coverage --config configs/jest.config.js"
   },
@@ -20,17 +34,21 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
     "esbuild": "0.15.8",
     "esbuild-jest": "0.5.0",
-    "esbuild-plugin-path-alias": "1.0.6",
+    "eslint": "8.4.1",
     "jest": "29.2.0",
     "jest-environment-jsdom": "29.0.3",
+    "prettier": "2.5.1",
     "react": "18.2.0",
+    "rimraf": "3.0.2",
     "ts-node": "10.9.1",
     "typescript": "4.8.3"
   },
   "peerDependencies": {
-    "@keg-hub/jsutils": "9.3.5",
+    "@keg-hub/jsutils": ">= 9.3.0",
     "react": ">= 18.0.0"
   }
 }
