--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@ltipton/cascader",
   "version": "0.0.1",
   "description": "React Cascade Render",
-  "main": "build/index.cjs.js",
-  "module": "build/index.es.js",
+  "main": "build/index.cjs",
+  "module": "build/index.mjs",
   "repository": "https://github.com/lancetipton/cascader",
   "author": "Lance Tipton",
   "license": "MIT",
@@ -15,7 +15,7 @@
     "cascader"
   ],
   "scripts": {
-    "build": "yarn build:clean && yarn build:es",
+    "build": "yarn build:clean && yarn build:es && yarn types",
     "build:es": "node configs/build.config.js",
     "build:clean": "rimraf ./build",
     "clean:full": "yarn clean && yarn install",
@@ -26,7 +26,9 @@
     "format": "yarn format:prettier && yarn format:eslint",
     "start": "yarn build:clean DEV_BUILD=1 node --enable-source-maps configs/build.config.js",
     "test": "NODE_ENV=test jest --colors --verbose --config configs/jest.config.js",
-    "test:cov": "NODE_ENV=test jest --colors --verbose --coverage --config configs/jest.config.js"
+    "test:cov": "NODE_ENV=test jest --colors --verbose --coverage --config configs/jest.config.js",
+    "types": "tsc --project tsconfig.json --declaration --emitDeclarationOnly --declarationMap false --outDir build --rootDir src",
+    "validate": "tsc --noEmit"
   },
   "devDependencies": {
     "@keg-hub/jsutils": "9.3.5",
