--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "repository": "https://github.com/lancetipton/cascader",
   "author": "Lance Tipton",
   "license": "MIT",
+  "files": [
+    "build",
+    "README.md"
+  ],
   "keywords": [
     "json",
     "schema",
